objects/APTMS_Account_Agreement_Clauses__c/APTMS_Account_Agreement_Clauses__c.object-meta.xml
<CustomObject>
    <description>This object is used to populate Systems Information agreement clauses on Account related list.</description>
    <label>Account Agreement Clause</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Agreement Clauses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Agreement Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>