objects/APTMS_Account_Agreement_Clauses__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Agreement Clauses</relationshipLabel>
    <relationshipName>Account_Agreement_Clauses</relationshipName>
    <type>Lookup</type>
</CustomField>