objects/APTMS_Account_Agreement_Clauses__c/fields/Agreement_Names__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Names__c</fullName>
    <label>Agreement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>