objects/APTMS_Account_Agreement_Clauses__c/fields/Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Number__c</fullName>
    <label>Agreement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>