objects/APTMS_Account_Agreement_Clauses__c/fields/Allowed__c.field-meta.xml
<CustomField>
    <fullName>Allowed__c</fullName>
    <description>(Checked=Allowed/Unchecked=Not Allowed)</description>
    <label>Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>