objects/APTMS_Account_Agreement_Clauses__c/fields/Clause__c.field-meta.xml
<CustomField>
    <fullName>Clause__c</fullName>
    <label>Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>