objects/APTMS_Account_Agreement_Clauses__c/fields/Clause_Text__c.field-meta.xml
<CustomField>
    <fullName>Clause_Text__c</fullName>
    <label>Modified Clause Text</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>